--- a/FriendsFinding/Views/Home/Search.cshtml
+++ b/FriendsFinding/Views/Home/Search.cshtml
@@ -4,34 +4,41 @@
 
 @using (Html.BeginForm("Search", "Home", FormMethod.Post, new { id = "searchForm" }))
 {
-    <div>
-        Name: @Html.TextBoxFor(m => m.Name)
-        Gender: @Html.DropDownListFor(m => m.Gender, new SelectList(new[] { "Male", "Female" }), "Select Gender")
-        DOB: @Html.TextBoxFor(m => m.DOB, "{0:yyyy-MM-dd}", new { type = "date" })
-        Favorite Color: @Html.TextBoxFor(m => m.FavoriteColor)
-        Favorite Actor: @Html.TextBoxFor(m => m.FavoriteActor)
-        <input type="submit" value="Search" />
-    </div>
-}
-<br />
-<div id="results">
-    @Html.Partial("_FriendList", Model)
-</div>
-@section Scripts {
-    <script type="text/javascript">$(document).ready(function () {
-    $('#searchForm').submit(function (e) {
-        e.preventDefault();
-
-        $.ajax({
-            url: $(this).attr('action'),
-            type: $(this).attr('method'),
-            data: $(this).serialize(),
-            success: function (result) {
-                $('#results').html(result); 
-            }
-            });
-        });
-    });
-</script>
-
-}
+    <div class="row">
+        <div class="col-sm-2">Name: @Html.TextBoxFor(m => m.Name, new { @class = "form-control" }) </div>
+        <div class="col-sm-2"> Gender: @Html.DropDownListFor(m => m.Gender, new SelectList(new[] { "Male", "Female", "Other" }), "Select Gender", new { @class = "form-control" })</div>
+        <div class="col-sm-2">
+            DOB: @Html.TextBoxFor(m => m.DOB, "{0:yyyy-MM-dd}", new { type = "date", @class = "form-control" })
+        </div>
+        <div class="col-sm-2">
+            Favorite Color: @Html.TextBoxFor(m => m.FavoriteColor, new { @class = "form-control" })
+        </div>
+        <div class="col-sm-2">
+            Favorite Actor: @Html.TextBoxFor(m => m.FavoriteActor, new { @class = "form-control" })
+        </div><br />
+        <div class="col-sm-2">
+            <input type="submit" value="Search" class="btn btn-info" />
+        </div>
+        </div>
+        }
+        <br />
+        <div id="results">
+            @Html.Partial("_FriendList", Model)
+        </div>
+        @section Scripts {
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    $('#searchForm').submit(function (e) {
+                        e.preventDefault();
+                        $.ajax({
+                            url: $(this).attr('action'),
+                            type: $(this).attr('method'),
+                            data: $(this).serialize(),
+                            success: function (result) {
+                                $('#results').html(result);
+                            }
+                        });
+                    });
+                });
+            </script>
+        }
