--- a/FriendsFinding/Views/Account/Signup.cshtml
+++ b/FriendsFinding/Views/Account/Signup.cshtml
@@ -15,7 +15,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="row">
         <div class="col-6">
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -23,8 +23,7 @@
         </div>
         <div class="col-6">
             <div class="form-floating mb-3">
-                @Html.DropDownList("Gender", (IEnumerable<SelectListItem>)ViewBag.Gender,
-               new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Gender, new SelectList(new[] { "Male", "Female", "Other" }), "Select Gender", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
